# EnclaveFuzz

./: .gitignore  .gitmodules  BeforeGetSDK.sh  CMakeLists.txt  GetSDK.sh  README.md  SGXSanConfig.h.in  build.sh  build_svf.sh  clean.sh  environment  getPatchedLib.sh  getSDK.sh  getSDKLib.sh  ghidra_cov_analysis.py
Data/: wolfssl.dbg.csv
Pass/: CMakeLists.txt
Pass/PassCommon/: CMakeLists.txt  PassCommon.cpp  PassCommon.hpp  SGXSanInstVisitor.cpp  SGXSanInstVisitor.hpp
Pass/SGXSanPass/: AddressSanitizer.cpp  AddressSanitizer.cpp.orig  AddressSanitizer.hpp  AdjustUSP.cpp  AdjustUSP.hpp  CMakeLists.txt  FunctionStackPoisoner.cpp  FunctionStackPoisoner.hpp  ModuleAddressSanitizer.cpp  ModuleAddressSanitizer.hpp  SGXSanPass.cpp  build.sh  clean.sh
Pass/SensitiveLeakSanPass/: CMakeLists.txt  SGXSanInstVisitor.hpp  SensitiveLeakSan.cpp  SensitiveLeakSan.hpp  SensitiveLeakSanPass.cpp  build.sh  clean.sh
Pass/SymbolSaverForLTOPass/: CMakeLists.txt  SymbolSaverForLTO.cpp  SymbolSaverForLTO.hpp  SymbolSaverForLTOPass.cpp  build.sh  clean.sh
Patch/: DISABLE_TRACE.patch  SVF.patch  sdk.patch
PyScript/: EdlParser.py
SDKPatch/: llvm.patch  llvm_compatible_psw.patch  sdk.patch  ubuntu20.patch
SGXFuzzerPass/: CMakeLists.txt  DriverGen.cpp  DriverGen.h  SGXFuzzerPass.cpp  SanitizerCoverage.cpp  SanitizerCoverage.h
SGXFuzzerRT/: CMakeLists.txt  FuzzDataType.h  GetRandFile.sh  Harness.cpp  RandPool.h  libFuzzerCallback.cpp  libFuzzerCallback.h  rand_file
SGXFuzzerRT/SGXFuzzerRTApp/: CMakeLists.txt  libFuzzerCallback.h
SGXSanManifest/: SGXSanManifest.h  SyncHeapSize.py
SGXSanPass/: .gitignore  ASanCommon.cpp  ASanCommon.hpp  AddressSanitizer.cpp  AddressSanitizer.h  AddressSanitizer.hpp  AdjustUSP.cpp  CMakeLists.txt  FuncRenamePass.cpp  FuncRenamePass.h  FunctionInstVisitor.hpp  FunctionStackPoisoner.cpp  FunctionStackPoisoner.hpp  GetOCallTable.cpp  LLVMStructTypeSerialize.cpp  LLVMStructTypeSerialize.h  ModuleAddressSanitizer.cpp  ModuleAddressSanitizer.hpp  PassCommon.hpp  PassUtil.cpp  PassUtil.h  SGXSanPass.cpp  SensitiveLeakSan.cpp  SensitiveLeakSan.hpp  SensitiveLeakSanitizer.cpp  SensitiveLeakSanitizer.h  build.sh  clean.sh  config.h.in  json.hpp
SGXSanRT/: ArgShadow.cpp  ArgShadow.h  CMakeLists.txt  Makefile  Malloc.cpp  Malloc.h  MemAccessMgr.cpp  MemAccessMgr.h  OutAddrWhitelist.cpp  OutAddrWhitelist.h  Poison.cpp  Poison.h  PoisonCheck.cpp  PoisonCheck.h  SGXSanConfig.h  SGXSanManifest.h  SGXSanRT.cpp  SGXSanRT.h  SGXSanRTConfig.h  Sticker.cpp  Sticker.h
SGXSanRT/SGXSanRTApp/: ArgShadow.cpp  ArgShadow.h  CMakeLists.txt  HostASanRT.cpp  HostASanRT.h  Interceptor.cpp  Interceptor.h  Malloc.cpp  Malloc.h  MemAccessMgr.cpp  MemAccessMgr.h  Poison.cpp  Poison.h  PoisonCheck.cpp  PoisonCheck.h  PrintfSpeicification.h  SGXSanEnclaveConfigReader.cpp  SGXSanEnclaveConfigReader.hpp  SGXSanRTApp.cpp  SGXSanRTApp.h  SGXSanRTApp.hpp  SGXSanRTUBridge.hpp  Sticker.cpp  Sticker.h  config.h.in  plot_byte_distr.py
SGXSanRT/SGXSanRTCommon/: SGXSanAlignment.h  SGXSanAssert.h  SGXSanCheck.h  SGXSanCommonErrorReport.hpp  SGXSanCommonPoison.hpp  SGXSanCommonPoisonCheck.hpp  SGXSanCommonShadowMap.hpp  SGXSanDefs.h  SGXSanInt.h  SGXSanLog.hpp  SGXSanRTCom.h  SGXSanStackTrace.hpp
SGXSanRT/SGXSanRTEnclave/: CMakeLists.txt  CiphertextDetect.cpp  CiphertextDetect.hpp  ContainerAllocator.hpp  EdgeCheck.cpp  EdgeCheck.hpp  EncalveTLSLifetime.cpp  EncalveTLSLifetime.hpp  ErrorReport.cpp  ErrorReport.hpp  InternDlmalloc.hpp  InternalDlmalloc.cpp  InternalDlmalloc.hpp  Malloc.cpp  Malloc.hpp  MemAccessMgr.cpp  MemAccessMgr.hpp  MemIntrinsics.cpp  MemIntrinsics.hpp  MemoryAccessCallback.cpp  Poison.cpp  Poison.hpp  PoisonCheck.cpp  PoisonCheck.hpp  PoisonSensitiveGlobal.cpp  PoisonSensitiveGlobal.hpp  Printf.h  Quarantine.cpp  Quarantine.hpp  SGXInternal.cpp  SGXInternal.hpp  SGXInternalStructure.h  SGXLayoutPoisoner.hpp  SGXSanAlignment.h  SGXSanCheck.h  SGXSanDefs.h  SGXSanPoison.cpp  SGXSanPoison.hpp  SGXSanPrintf.cpp  SGXSanPrintf.hpp  (+22 more)
SGXSanRT/SGXSanRTEnclave/libunwind/: README.md
SGXSanRT/SGXSanRTEnclave/libunwind/include/: dwarf.h  libunwind-common.h  libunwind-x86_64.h
SGXSanRT/SGXSanRTEnclave/libunwind/include/tdep-x86_64/: dwarf-config.h  libunwind_i.h
SGXSanRT/linux-sgx-mini/: sdk.patch
SGXSanRT/linux-sgx-mini/common/inc/: sgx_random_buffers.h
SGXSanRT/linux-sgx-mini/common/inc/internal/: routine.h
SGXSanRT/linux-sgx-mini/common/inc/tlibc/: ext_string.h  mbusafecrt.h
SGXSanRT/linux-sgx-mini/psw/urts/: enclave_mutex.cpp
SGXSanRT/linux-sgx-mini/sdk/tlibthread/: sethread_cond.cpp  sethread_internal.h  sethread_mutex.cpp  sethread_rwlock.cpp
SGXSanRT/linux-sgx-mini/sdk/trts/: trts_internal.h
SGXSanRT/linux-sgx/common/inc/: sgx_tkey_exchange_t.h  sgx_tkey_exchange_u.h
SGXSanRT/linux-sgx/sdk/cpprt/linux/libunwind/include/: dwarf.h  libunwind-common.h  libunwind-x86_64.h  libunwind.h
SGXSanRT/linux-sgx/sdk/cpprt/linux/libunwind/include/tdep-x86_64/: libunwind_i.h
SGXSanRT/sdk/inc/: mbusafecrt.h
SanitizerCommon/: Makefile
SensitiveLeakSanPass/: .gitignore  CMakeLists.txt  FunctionInstVisitor.hpp  SensitiveLeakSan.cpp  SensitiveLeakSan.hpp  SensitiveLeakSanPass.cpp  build.sh  clean.sh  example.c
Tool/: .gitignore  AnalyzeAllFuzzer1Step1.sh  AnalyzeAllFuzzer1Step2.sh  AnalyzeAllFuzzer2.sh  AnalyzeAllFuzzer2Step1.sh  AnalyzeAllFuzzer2Step2.sh  AnalyzeFuzzer1Step1.sh  AnalyzeFuzzer1Step2.sh  AnalyzeFuzzer2.sh  AnalyzeFuzzer2Step1.sh  AnalyzeFuzzer2Step2.sh  AnalyzeSGXFuzz.sh  CountEnterECall.py  EdlParser.py  Enclave.export  GetLayout.py  GetLayout.sh  InsertLogECall.py  PlotCov.py  analyze.sh  crontab.sh  filter_crashes.py  merge.sh  setup.sh  start_crontab.sh  stop.sh  stop_crontab.sh  watch.sh  wolfssl_plot.py
kAFLUSpaceUtil/: CMakeLists.txt  README.md  ghidra_cov_analysis.py  ghidra_cov_analysis_sgxfuzz.py  ghidra_run.sh  nyx_agent.h  unique_edges.sh  vmcall
kAFLUSpaceUtil/initrd/: gen_initrd.sh
linux-sgx-build-scripts/: build.sh  build_install.sh  clean.sh  install.sh  prepare.sh  set_apt_source.sh  uninstall.sh  unprepare.sh
patch/: SVF.patch  (+5 more)
(+45 files in other folders)
